[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6.8", features = ["cors"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio","runtime-tokio-rustls", "macros"] }
argon2 = { version = "0.5.3", features = ["std"]}
password-hash = "0.6.0"
anyhow = "1"